# kiss

./: .gitattributes  .gitmodules  A.hs  K.hs  P.hs  T.hs  kiss.cabal  makefile  readme.md
semantic-k/: AST.hs  semantic-k.cabal
tree-sitter-k/: c.h  grammar.js  p3.c  p3.k  readme.md  scanner.c
tree-sitter-k/TreeSitter/: K.hs
tree-sitter-k/corpus/: a.txt  l.txt  m.txt  s.txt
