cabal-version:3.0
name:kiss
version:0.2

common k{ghc-options:-Wno-partial-type-signatures
         default-language:Haskell2010
}
library{import: k
        exposed-modules:A K P T
        build-depends:base,array,mtl,QuickCheck,text,shower,tree-sitter-k,semantic-k,semantic-ast
        default-language:Haskell2010
}

